tests/codegen/errors/reader/signatures-params/atom.reader.error.reader.rest.param.needs.name/reader-rest-param-needs-name.mon
;; TEST-ID: tests.codegen.reader-error.reader-rest-param-needs-name
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/signatures-params
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: Expected parameter name or '[name :: Type]' after '.'
;; TEST-ATOM: atom.reader.error.reader.rest.param.needs.name
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.rest.param.needs.name
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: Expected parameter name or '[name :: Type]' after '.'
;; TEST-READER-PATH: reader.c:2123 parser.parameters
;; TEST-CODEGEN-PATH: diagnostic.parser.parameters
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:2123 Expected parameter name or '[name :: Type]' after '.'
;; TEST-USES-ATOM: atom.reader.error.reader.rest.param.needs.name
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.parameters
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/signatures-params/atom.reader.error.reader.rest.param.needs.name
;; TEST-MENU-PATH: codegen/errors/reader/signatures-params/atom.reader.error.reader.rest.param.needs.name
;; TEST-ATOM-LEAF: atom.reader.error.reader.rest.param.needs.name
;; TEST-CLI-TARGET: codegen errors reader signatures-params

(module Main)
(lambda (. 123) 0)
